--- a/lab09/styles.css
+++ b/lab09/styles.css
@@ -52,5 +52,5 @@ nav a:hover {background-color: #30475E;}
         display: block;}
     span {display: none}
     nav {padding: 30px;}
-    .indexheader {margin-left: 0px;}
+    .indexheader {margin-left: none;}
 }
