--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -14,7 +14,7 @@ nav {
     padding: 10px;
     margin-bottom: 30px;
     }
-nav a {color: #DDDDDD;}
+nav a {color: #000;}
 
 a:visited {color: #30475E;}
 
