--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -13,8 +13,9 @@ nav {
     background-color: #F05454;
     padding: 10px;
     margin-bottom: 30px;
+    font-size: 2em;
     }
-nav a {color: #222831;}
+nav a {color: #000;}
 
 a:visited {color: #30475E;}
 
