fix pleaseeeee i fucking hate this

--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -13,7 +13,7 @@ nav {
     background-color: #F05454;
     padding: 10px;
     margin-bottom: 30px;
-    font-size: 2em;
+    font-weight: bolder;
     }
 nav a {color: #000;}
 
