--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #F05454;}
+    background-color: #DDDDDD;}
 
 p {
     color: #222831;}
@@ -10,7 +10,7 @@ a:link {
 h1 {color: #222831;}
 
 nav {
-    background-color: #DDDDDD;
+    background-color: #FFFFFF;
     padding: 10px;
     margin-bottom: 30px;
     }
@@ -28,7 +28,7 @@ nav a:hover {background-color: #FFFFFF;}
 
 .address {float:left;}
 
-.part1 {background-color:  #DDDDDD;
+.part1 {background-color:  #F05454;
         margin: 20px;
         margin-bottom: 10px;
         padding: 30px;
@@ -37,7 +37,7 @@ nav a:hover {background-color: #FFFFFF;}
 .part2 {display: flex;
         flex-wrap: wrap;
         margin-top: 50px;
-        background-color:  #DDDDDD;
+        background-color:  #F05454;
         margin: 30px;
         padding: 30px;
         border-radius: 1em;
