--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -5,7 +5,7 @@ p {
     color: #222831;}
 
 a:link {
-    color: #222831;}
+    color: #30475E;}
 
 h1 {color: #222831;}
 
@@ -14,11 +14,11 @@ nav {
     padding: 10px;
     margin-bottom: 30px;
     }
-nav a {color: #000;}
+nav a {color: #DDDDDD;}
 
 a:visited {color: #30475E;}
 
-nav a:hover {background-color: #FFFFFF;}
+nav a:hover {background-color: #30475E;}
 
 .quote {float: right;}
 
@@ -28,7 +28,7 @@ nav a:hover {background-color: #FFFFFF;}
 
 .address {float:left;}
 
-.part1 {background-color:  #F05454;
+.part1 {background-color:  #DDDDDD;
         margin: 20px;
         margin-bottom: 10px;
         padding: 30px;
@@ -37,7 +37,7 @@ nav a:hover {background-color: #FFFFFF;}
 .part2 {display: flex;
         flex-wrap: wrap;
         margin-top: 50px;
-        background-color:  #F05454;
+        background-color:  #DDDDDD;
         margin: 30px;
         padding: 30px;
         border-radius: 1em;
@@ -53,7 +53,6 @@ nav a:hover {background-color: #FFFFFF;}
     span {display: none}
     nav {padding: 30px;}
 }
-
 #skip {
     position: absolute;
     left: -999px;
