--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -28,7 +28,7 @@ nav a:hover {background-color: #30475E;}
 
 .address {float:left;}
 
-.part1 {background-color:  #F05454;
+.part1 {background-color:  #FFFFFF;
         margin: 20px;
         margin-bottom: 10px;
         padding: 30px;
@@ -36,7 +36,7 @@ nav a:hover {background-color: #30475E;}
 
 .part2 {display: flex;
         margin-top: 50px;
-        background-color:  #F05454;
+        background-color:  #FFFFFF;
         margin: 30px;
         padding: 30px;
         border-radius: 1em;
