--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -10,7 +10,7 @@ a:link {
 h1 {color: #222831;}
 
 nav {
-    background-color: #F05454;
+    background-color: #FFFFFF;
     padding: 10px;
     margin-bottom: 30px;
     }
