--- a/projectfolder/styles.css
+++ b/projectfolder/styles.css
@@ -66,8 +66,8 @@ p {
     text-align: center;
 }
 a {
-    color: #fefefe;
+    color: #142030;
 }
 a:visited {
-    color: #fefefe;
+    color: #142030;
 }
